@@ -1,3 +1,10 @@
+2012-03-22  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/52547
+	* tree-nested.c (convert_tramp_reference_stmt): Call declare_vars
+	on any new_local_var_chain vars declared during recursing on
+	GIMPLE_OMP_PARALLEL or GIMPLE_OMP_TASK body.
+
 2012-03-22  Georg-Johann Lay  <avr@gjlay.de>
 
 	Backport from 2012-03-22 mainline r185692.
